--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "xtal-element": "0.0.42",
+    "xtal-material": "0.0.53"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bahrus/public-choice.git"
