--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "xtal-element": "0.0.42",
-    "xtal-material": "0.0.53"
+    "xtal-material": "0.0.56",
+    "xtal-frappe-chart": "0.0.22",
+    "purr-sist": "0.0.38",
+    "p-d.p-u": "0.0.110",
+    "trans-render": "0.0.87"
   },
   "repository": {
     "type": "git",
