--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-web-components/google-chart": "3.0.6",
+    "xtal-frappe-chart": "0.0.44",
     "if-diff": "0.0.36",
     "slot-bot": "0.0.4",
     "p-et-alia": "0.0.46",
