--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "public-choice.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node node_modules/xtal-test/serve.js"
+    "serve": "node node_modules/xtal-test/serve.js",
+    "start": "es-dev-server --app-index demo/dev-mwc.html --node-resolve --watch --open"
   },
   "dependencies": {
     "xtal-frappe-chart": "0.0.70",
@@ -21,7 +22,8 @@
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "2.4.3",
-    "xtal-test": "0.0.44"
+    "xtal-test": "0.0.44",
+    "es-dev-server": "1.47.0"
   },
   "repository": {
     "type": "git",
